# Assistive-VQA

./: .gitignore  CONTRIBUTING.md  EVALUATION.md  GROUP_REPORT.md  HOW_TO_TEST.sh  ProjectMilestone.md  Proposal.md  README.md  TESTING.md  evaluate_system.py  evaluation_results.json  main.py  requirements.txt  run-dev.sh  test-backend.sh
data/: cases.csv
docs/: eval.md
ocr/: README.md  debug_ocr.py  ocr_module.py  reproduce_ocr.py
ocr/ocr-app/: FLOWCHART.md  INDIVIDUAL_REPORT.md  README.md  pyproject.toml  requirements.txt
ocr/ocr-app/notebooks/: exploration.ipynb
ocr/ocr-app/src/ocr_app/: __init__.py  config.py  main.py  ocr.py  preprocess.py  utils.py  utils.py.backup
ocr/ocr-app/tests/: test_ocr.py
ui/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  app.py
ui-webapp/: package-lock.json  package.json
ui-webapp/app/: page.tsx
ui-webapp/components/: AnswerDisplay.tsx  ImageUploader.tsx  QuestionInput.tsx
ui/tests/: TEST_RESULTS.md
vqa/: CONFIG.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  TEST.md  requirements.txt  run_quick_inference.py  setup_vqa.py  test_vqa.py  vqa_model.py
